infrastructure/cilium/velero/node-agent.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-agent
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      name: node-agent
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: minio
